--- a/practice1/js/index.html
+++ b/practice1/js/index.html
@@ -17,18 +17,19 @@
           <li><a href="about.html">ABOUT</a></li>
         </ul>
       </nav>
+    </header>
+    <main class="container">
       <img src="suspension_building.jpg" alt="suspension building in Minneapolis, mn" width="400px">
-          </header>
-
+    </main>
          <section class="article-thumbs">
-           <img src="landscape_project.jpg" alt="Wooden Lanscape Project" height="200px">
-           <img src="mountain_drawing.jpg" alt="Mountain drawing" height="200px">
-           <img src="gold_medal_flour.jpg" alt="Photo of me at Gold Medal Flour" height="200px">
            <nav id="secondary-nav">
            <ul>
-             <li> ARCHITECTURE </li>
-             <li> ART </li>
-             <li> ABOUT </li>
+             <li> ARCHITECTURE
+               <img src="landscape_project.jpg" alt="Wooden Lanscape Project" height="200px"></li>
+             <li> ART
+                <img src="mountain_drawing.jpg" alt="Mountain drawing" height="200px"></li>
+             <li> ABOUT
+               <img src="gold_medal_flour.jpg" alt="Photo of me at Gold Medal Flour" height="200px"></li>
            </ul>
          </nav>
          </section>
